--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,11 @@
 [package]
 name = "indextree"
-version = "1.1.0"
+version = "1.0.0"
 license = "MIT"
 readme = "README.md"
 keywords = ["tree", "arena", "index", "indextree", "trie"]
-authors = ["Sascha Grunert <mail@saschagruenrt.de>"]
-repository = "https://github.com/saschagrunert/indextree"
-homepage = "https://github.com/saschagrunert/indextree"
-documentation = "https://docs.rs/indextree"
+authors = ["Christopher Chin <ctchin13@gmail.com>", "Sascha Grunert <mail@saschagruenrt.de>"]
+repository = "https://github.com/Meptl/indextree"
+homepage = "https://github.com/Meptl/indextree"
 description = "Arena based tree structure by using indices instead of reference counted pointers"
 categories = ["data-structures"]
-
-[badges]
-travis-ci = { repository = "saschagrunert/indextree", branch = "master" }
-appveyor = { repository = "saschagrunert/indextree", branch = "master", service = "github" }
